updated articles page
updated articles page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#" class="logo">Mind Ease</a>
         <nav>
           <ul class="nav-menu">
-            <li><a href="#articles">Articles</a></li>
+            <li><a href="articles.html">Articles</a></li>
             <li><a href="#support">Support Groups</a></li>
             <li><a href="#breathing">Breathing Exercise</a></li>
           </ul>
